Changelog
=========

1.10 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~

 * Use minified versions of jQuery and jQuery UI in the admin. Total savings without compression 371 KB (Tom Dyson)
 * Hooks can now specify the order in which they are run (Gagaro)
 * Added a `submit_buttons` block to login template (Gagaro)
 * The homepage created in the project template is now titled "Home" rather than "Homepage" (Karl Hobley)
 * Fix: Marked 'Date from' / 'Date to' strings in wagtailforms for translation (Vorlif)
 * Fix: Unreliable preview is now reliable by always opening in a new window (Kjartan Sverrisson)
 * Fix: Fixed placement of `{{ block.super }}` in `snippets/type_index.html` (LB (Ben Johnston))


1.9 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Added support for comparing page revisions (Karl Hobley, Janneke Janssen, Matt Westcott)
 * Added support for many-to-many relations on page models (Thejaswi Puthraya, Matt Westcott)
 * Form builder form submissions can now be bulk-deleted (Karl Hobley)
 * `get_context` methods on StreamField blocks can now access variables from the parent context (Mikael Svensson, Peter Baumgartner)
 * Updated admin dashboard welcome message for multi-tenanted installations (Jeffrey Chau)
 * Changed text of "Draft" and "Live" buttons to "View draft" and "View live" (Dan Braghis)
 * Added `get_api_representation` method to streamfield blocks allowing the JSON representation in the API to be customised (Marco Fucci)
 * Added `before_copy_page` and `after_copy_page` hooks (Matheus Bratfisch)
 * View live / draft links in the admin now consistently open in a new window (Marco Fucci)
 * `ChoiceBlock` now omits the blank option if the block is required and has a default value (Andreas Nüßlein)
 * The `add_subpage` view now maintains a `next` URL parameter to specify where to redirect to after completing page creation (Robert Rollins)